# openclaw-memoriesai

./: .dockerignore  .gitignore  API_showcase.ipynb  README.md  bootstrap.sh  detm-daemon.service  dev.sh  install.sh  memoriesai-daemon.service  pyproject.toml  uninstall.sh  update.sh
.serena/: project.yml
benchmarks/osworld/: debug_server.py  debug_task.py  detm_agent.py  generate_debug_html.py  run_detm.py  run_detm_multienv.py  snapshot.sh
benchmarks/screenspot_pro/: eval.py
docker/: Dockerfile  detm-docker.sh  entrypoint.sh
docs/: AGENT-COMPARISON-2026.md  ARCHITECTURE.md  BENCHMARKING.md  COMPARISON-OPENCLAW-COWORK-SIMULAR.md  CURSOR-CONTROL.md  DEVELOPMENT.md  LOCAL-TESTING.md  PERFORMANCE-OPTIMIZATION.md  PROBLEMS.md  PROCEDURAL-MEMORY.md  RESEARCH.md  ROADMAP.md  SMART-WAIT.md  TASK-MEMORY-RECOVERY-SPEC.md  TASK-MEMORY.md  TOOLS.md  fresh-install-notes.md  test-prompts-backup-20260303.md  test-prompts.md  vm-test-plan.md
docs/diagrams/: architecture.drawio  mcp-tool-call-flow.drawio  smart-wait-flow.drawio  task-memory-flow.drawio  vision-pipeline.drawio
docs/test-data/: brand-brief.md  campaign-a-macro.csv  campaign-b-micro.csv  roi-summary.csv  weekly-performance-feb10.csv
openclaw/: MEMORY-fragment.md
plugins/detm-tool-logger/: index.js  (+2 more)
scripts/: acu_cleanup_test_runs.py  acu_dump_task.py  acu_harness.py  acu_scenario_live_screen.py  acu_scenario_live_ui.py  acu_scenario_smart_wait.py  acu_scenario_task_memory.py  acu_test_portal.py  deploy-agents.sh  detm-mcp.service  inspect_session.py  memoriesai.service  test_live_ui.py  test_qwen_live.py
skill/: SKILL.md
tests/: conftest.py  test_integration.py
(+106 files in other folders)
