[project]
name = "openclaw-memoriesai"
version = "0.1.0"
description = "MCP server giving OpenClaw persistent task memory, smart visual waiting, and procedural recall"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "python-xlib>=0.33",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
openclaw-memoriesai = "openclaw_memoriesai.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_memoriesai"]
