[project]
name = "agentic-computer-use"
version = "0.2.0"
description = "Desktop Environment Task Manager — visual task tracking, smart waiting, GUI automation, and pluggable vision for agentic computer use"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "python-xlib>=0.33",
    "aiosqlite>=0.20.0",
    "aiohttp>=3.9.0",
    "ultralytics>=8.0.0",
    "transformers>=4.40.0",
    "timm>=0.9.0",
    "einops>=0.7.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
agentic-computer-use = "agentic_computer_use.server:main"
detm-daemon = "agentic_computer_use.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_computer_use"]
